tests/transpiler/x/kt/map_nested_assign.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/transpiler/x/kt/map_nested_assign.kt:4:5: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Int>?
    data["outer"]["inner"] = 2
    ^
/workspace/mochi/tests/transpiler/x/kt/map_nested_assign.kt:5:13: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Int>?
    println(data["outer"]["inner"])
            ^
